# tracekit

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  PRIVACY.md  PRODUCTION.md  README.md  SECURITY.md  TODO.md  WEBSITE.md  dev.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml
.devcontainer/: README.md  devcontainer.json  install.sh  verify.sh
.github/workflows/: docker-publish.yml  lint-site.yml  mypy.yml  pytest.yml  ruff.yml  test-web-app.yml  verify-devcontainer.yml
app/: README.md  auth_mode.py  calendar_data.py  conftest.py  data_claim.py  db_init.py  gunicorn.conf.py  helpers.py  main.py  requirements-test.txt
app/models/: user.py
app/routes/: admin.py  api.py  auth.py  auth_garmin.py  auth_intervalsicu.py  auth_ridewithgps.py  auth_strava.py  calendar.py  files.py  intervalsicu_webhook.py  month.py  notifications.py  pages.py  ridewithgps_webhook.py  strava_webhook.py  stripe_bp.py
app/static/: calendar.js  settings.js  style.css
app/templates/: admin.html  base.html  calendar.html  gear.html  index.html  login.html  month.html  privacy.html  settings.html  signup.html
app/tests/: conftest.py  test_auth.py  test_calendar.py  test_files_routes.py  test_impersonation.py  test_intervalsicu.py  test_month_routes.py  test_provider_visibility.py  test_system_credentials.py  test_web_app.py
design/mocks/: sync_status_page.html
scripts/: run-dev.sh
site/: COLORS.md  README.md  dev.sh  package-lock.json  package.json  vite.config.js
site/public/: CNAME
site/scripts/: build.js
site/src/: about.html  developer.html  developer.template.html  faq.html  index.template.html  privacy.html  providers.html
tests/: conftest.py  test_core.py  test_metadata.py  test_sync.py
tests/commands/: test_configure.py  test_sync_month.py  test_sync_month_duration_hms.py
tests/fileformats/: test_fit.py  test_gpx.py  test_tcx.py
tests/providers/: test_file_provider.py  test_garmin.py  test_ridewithgps.py  test_spreadsheet.py  test_strava.py
tracekit/: __init__.py  __main__.py  activity.py  appconfig.py  calendar.py  core.py  database.py  db.py  notification.py  provider_status.py  provider_sync.py  stats.py  sync.py  user_context.py  utils.py  worker.py
tracekit/commands/: auth_garmin.py  auth_strava.py  calendar_cmd.py  configure.py  migrate.py  pull.py  reset.py  status.py  sync_month.py
tracekit/providers/: __init__.py  base_provider.py  (+1 more)
(+29 files in other folders)
