[project]
name = "fitler"
version = "0.0.1"
description = "Aggregate, sync, and analyze your fitness activity data."
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Chris Kelly", email = "ckdake@ckdake.com" }
]
requires-python = ">=3.7"
dependencies = [
    "peewee==3.18.3",
    "gpxpy==1.6.2",
    "python-tcxparser==2.4.0",
    "fitparse==1.2.0",
    "openpyxl==3.1.5",
    "dateparser==1.2.2",
    "pytz==2025.2",
    "requests>=2.31.0,<3.0.0",
    "pyrwgps==0.0.6",
    "python-dotenv==1.2.1",
    "stravalib==2.4",
    "tabulate==0.9.0",
    "garminconnect==0.2.28"
]

[project.optional-dependencies]
dev = [
    "pylint==3.3.9",
    "ruff==0.14.6",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pre-commit==4.3.0",
    "flask>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://fitler.net"
Repository = "https://github.com/ckdake/fitler"
Issues = "https://github.com/ckdake/fitler/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.mypy]
# ...other mypy config...

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true
