[project]
name = "tracekit"
version = "0.0.1"
description = "Aggregate, sync, and analyze your fitness activity data."
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Chris Kelly", email = "ckdake@ckdake.com" }
]
requires-python = ">=3.14"
dependencies = [
    "peewee==4.0.0",
    "gpxpy==1.6.2",
    "python-tcxparser==2.4.0",
    "fitparse==1.2.0",
    "openpyxl==3.1.5",
    "dateparser==1.3.0",
    "pytz==2025.2",
    "requests>=2.31.0,<3.0.0",
    "pyrwgps==0.1.0",
    "python-dotenv==1.2.1",
    "stravalib==2.4",
    "flask>=3.0.0,<4.0.0",
    "tabulate==0.9.0",
    "garminconnect==0.2.38"
]

[project.optional-dependencies]
dev = [
    "pylint==4.0.5",
    "ruff==0.15.2",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.1",
]

[project.urls]
Homepage = "https://tracekit.app"
Repository = "https://github.com/ckdake/tracekit"
Issues = "https://github.com/ckdake/tracekit/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.mypy]
# ...other mypy config...

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true
